# harn

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  harn.toml
.claude/: current-plan.md  settings.json
.claude/agents/: spec-implementer.md  spec-researcher.md  spec-writer.md
.claude/commands/: ci.md  deps.md  diagnose.md  doc-audit.md  implement.md  issues.md  lint.md  pr.md  retro.md  review.md  run-plan.md  ship.md  spec.md  test.md
.claude/hooks/: inject-plan.sh
.claude/plans/: completed-harn-doctor-2026-03-07.md
.cursor/: rules
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: interactive.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: agent_tools.rs  agent_workflows.rs  config.rs  context.rs  date.rs  doctor.rs  lib.rs  module.rs  url.rs
crates/modules/: Cargo.toml
crates/modules/src/: agent.rs  agent_overlay.rs  build.rs  ci.rs  docker.rs  env.rs  git.rs  ide.rs  lib.rs  project_checks.rs  quality.rs  registry.rs  sdd.rs  sdd_checks.rs
crates/modules/tests/: template_coverage.rs
crates/templates/: Cargo.toml
crates/templates/src/: engine.rs  lib.rs
docs/: README.md
docs/playbooks/: add-new-language.md  coding-agent-workflow.md  create-new-spec.md
docs/specs/: _index.md
docs/specs/_templates/: research.md
templates/agent/: AGENTS.md  CLAUDE.md  clinerules  cursor-rules  qoderrules  windsurfrules
templates/agent/codex/: print-config.sh
templates/agent/commands/: ci.md  deploy.md  deps.md  diagnose.md  doc-audit.md  implement.md  issues.md  lint.md  pr.md  retro.md  review.md  run-plan.md  ship.md  spec.md  sync-commands.md  test.md
templates/agent/skills/: SKILL.md
templates/docker/: Dockerfile.cpp  Dockerfile.dart  Dockerfile.generic  Dockerfile.go  Dockerfile.java  Dockerfile.python  Dockerfile.rust  Dockerfile.typescript  docker-compose.yml
templates/env/: env.example
templates/git/: gitattributes
templates/quality/: checkstyle.xml  clang-format  editorconfig  eslint.config.js  golangci.yml  ruff.toml
templates/sdd/: README.md
(+41 files in other folders)
