[package]
name = "harn-modules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
harn-core.workspace = true
harn-templates.workspace = true
anyhow.workspace = true
console.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
